@@ -364,7 +364,7 @@ DIGEST=ripemd160
 AC_ARG_ENABLE(digest,
   [AS_HELP_STRING(--enable-digest=CIPHER,[
       Select the digest algorithm to use (default "ripemd160"). Must be one of
-      "sha512", "sha256", "sha1", "ripemd160", "md5" (insecure) or "md4" (insecure).])],
+      "sha512", "sha256", "sha1" (somewhat insecure), "ripemd160", "md5" (insecure) or "md4" (insecure).])],
   if test "x$enableval" = xsha512   ; then DIGEST=sha512   ; fi
   if test "x$enableval" = xsha256   ; then DIGEST=sha256   ; fi
   if test "x$enableval" = xsha1     ; then DIGEST=sha1     ; fi
